sample/kubernetes/deployment/sample.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: person
  labels:
    app: person
spec:
  replicas: 1
  selector:
    matchLabels:
      app: person
  template:
    metadata:
      labels:
        app: person
    spec:
      containers:
      - name: person
        image: 'master:32000/person:latest'
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m
---
kind: Service
apiVersion: v1
metadata:
  name: person
spec:
  selector:
    app: person
  ports:
    - port: 8080
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: auftrag
  labels:
    app: auftrag
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auftrag
  template:
    metadata:
      labels:
        app: auftrag
    spec:
      containers:
      - name: auftrag
        image: 'master:32000/auftrag:latest'
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m
---
kind: Service
apiVersion: v1
metadata:
  name: auftrag
spec:
  selector:
    app: auftrag
  ports:
    - port: 8080
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: shop
  labels:
    app: shop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shop
  template:
    metadata:
      labels:
        app: shop
    spec:
      containers:
      - name: shop
        image: 'master:32000/shop:latest'
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m
---
kind: Service
apiVersion: v1
metadata:
  name: shop
spec:
  selector:
    app: shop
  ports:
    - port: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /api/shop
            backend:
              service:
                name: shop
                port:
                  number: 8080
          - pathType: Prefix
            path: /api/person
            backend:
              service:
                name: person
                port:
                  number: 8080
          - pathType: Prefix
            path: /api/auftrag
            backend:
              service:
                name: auftrag
                port:
                  number: 8080
